--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="container"></div>
+        <div id="container">
+            <div id="gameboard"></div>
+        </div>
         
         <script src="scripts.js" defer></script>
     </body>
