--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -5,8 +5,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div id="container">
-            <div id="gameboard"></div>
+        <div id="main">
+            <div id="container">
+                <div id="gameboard"></div>
+            </div>
         </div>
         
         <script src="scripts.js" defer></script>
