remove auto grid color reset delay, add reset button, add prompt for grid size

--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -8,6 +8,9 @@
         <div id="main">
             <div id="container">
                 <div id="gameboard"></div>
+                <button id="reset">
+                    <img src="images/reset.png" alt="reset">
+                </button>
             </div>
         </div>
         
